todo-app/manifests/dep-with-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      name: todo-app
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-pv
          persistentVolumeClaim:
            claimName: todo-claim
      containers:
        - name: todo-app
          image: nepjnq/todo-app:1.2
          imagePullPolicy: Always
        - name: todo-backend
          image: nepjnq/todo-backend:1.0
          imagePullPolicy: Always
