todo-app/manifests/stateful-todo.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-svc
  labels:
    app: todo-svc
spec:
  ports:
    - port: 8085
      name: frontend
    - port: 8090
      name: backend
  clusterIP: None
  selector:
    app: todo-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: todo-app
spec:
  serviceName: "todo-svc"
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-backend
          image: nepjnq/todo-backend:1.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
        - name: todo-frontend
          image: nepjnq/todo-frontend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8085
